--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -89,7 +89,7 @@
             <div class="icon"><i id="left" class="fa-solid fa-angle-left"></i></div>
             <ul class="tabs-box" id="tabs-box">
                 <!--<li id="customtab" class="tab active">Custom</li>-->
-                <li id="endtab" class="mcatab" onclick="MES()">MCA End of School</li>
+                <li id="endtab" class="mcatab" onclick="MES()">MCA End of Year</li>
                 <li id="nydtab" class="tab" onclick="NYD()">New Year's Day</li>
                 <li id="vdtab" class="tab" onclick="VD()">Valentine's Day</li>
                 <li id="idtab" class="tab" onclick="ID()">Independence Day</li>
