--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
             <h1 style="margin:30px">Let's make something cool together. <a style="color: #240200;" target="_blank" rel="noopener noreferrer" href="mailto:contact@michaeldors.com">Get In Touch<i style="margin-left:10px;" class="fa-solid fa-chevron-right"></i></a></h1>
         </section>
         <section class="projectarea">
+            <img data-aos="fade" style="overflow:hidden;" class="headerimgglow" src="headers/duolingostreak.png" />
+            <h1 data-aos="fade-up">Pull Duolingo Streak</h1>
+            <h2 data-aos="fade-up">Siri Shortcut</h2>
+            <img data-aos="fade-up" class="headerimg" src="headers/duolingostreak.png" />
+            <p data-aos="fade-up">
+                Quickly figure out how long your Duolingo streak is, without opening the app. Combine with other logic for cool automations.
+            </p>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://www.icloud.com/shortcuts/3fcd582c50454be7a1eff98bf78c1a05">Check It Out</a>
+        </section>
+        <section class="projectarea">
             <p>this portfolio is a work in progress. expect updates to come.</p>
         </section>
     </div>
