--- a/messagekit.html
+++ b/messagekit.html
@@ -96,8 +96,7 @@
         <img id="updatebannerimg" class="banner" src="messagekitnewestbanner.png" style="width:90%; border-radius: 20px; margin-top:30px;">
         <br>
         <br>
-        <h2>MessageKit Is Unavailable</h2>
-        <a style="display:none;" class="a" href="https://www.icloud.com/shortcuts/b519284c6daa4a75bf7aa12cfcbd4731" onclick="downloadnew()">Download</a>
+        <a class="a" href="https://www.icloud.com/shortcuts/b519284c6daa4a75bf7aa12cfcbd4731" onclick="downloadnew()">Download</a>
         <br>
         <br>
         <h2 style="padding-bottom:0px">Enjoying MessageKit?</h2>
