--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://www.icloud.com/shortcuts/3fcd582c50454be7a1eff98bf78c1a05">Check It Out</a>
         </section>
         <section class="projectarea">
-            <p>this portfolio is a work in progress. expect updates to come.</p>
+            <p style="padding-top:50vh;">this portfolio is a work in progress. expect updates to come.</p>
         </section>
     </div>
     <section>
