--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p data-aos="fade-up" class="barcode">MICHAELDORSWEB</p>
 
             <div class="marquee">
-                <p data-aos="fade-up">Websites | Designs | Video Editing | 3D Animations</p>
+                <p>Websites | Designs | Video Editing | 3D Animations</p>
             </div>
             <img class="talents" style="width:300px; border-radius:50%; filter:blur(5px);" src="talents.png" />
             <br>
