--- a/index.html
+++ b/index.html
@@ -15,8 +15,24 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body id="body">
-    <nav>
-        <a href=""><img src="logo.svg" /></a>
+    <nav id="navigation" class="navdown">
+        <div class="topofnav">
+            <i id="hideonpcicon" class="fa-solid fa-mobile"></i>
+            <a href=""><img src="logo.svg" /></a>
+            <i id="toggler" class="fa-solid fa-bars" onmouseup="openmenu()"></i>
+            <div id="desktopnav">
+                <a href="index.html">Home</a>
+                <a style="display:none;" href="about.html">About Me</a>
+                <a style="display:none;" href="projects.html">Projects</a>
+                <a href="mailto:contact@michaeldors.com">Contact</a>
+            </div>
+        </div>
+        <div id="mobileopennav">
+            <a id="mobilehome" href="index.html" class="navbutton full-width">Home</a>
+            <a style="display:none;" id="mobileabout" href="about.html" class="navbutton">About Me</a>
+            <a style="display:none;" id="mobileprojects" href="projects.html" class="navbutton">Projects</a>
+            <a id="mobilecontact" href="mailto:contact@michaeldors.com" class="navbutton full-width">Contact Me</a>
+        </div>
     </nav>
     <section>
         <div class="top" style="background-color: #F6EEE3">
@@ -112,4 +128,15 @@
 
 <script>
     AOS.init();
+
+    document.getElementById("navigation").classList.remove("navdown");
+
+    window.addEventListener('scroll', e => {
+        if (window.scrollY > 100) {
+            document.getElementById("navigation").classList.add("navdown");
+        }
+        else {
+            document.getElementById("navigation").classList.remove("navdown");
+        }
+    });
 </script>
