--- a/index.html
+++ b/index.html
@@ -15,23 +15,24 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body id="body">
+
     <nav id="navigation" class="navdown">
         <div class="topofnav">
             <i id="hideonpcicon" class="fa-solid fa-mobile"></i>
-            <a href=""><img src="logo.svg" /></a>
+            <a onclick="transitionToPage('index.html')"><img src="logo.svg" /></a>
             <i id="toggler" class="fa-solid fa-bars" onmouseup="openmenu()"></i>
             <div id="desktopnav">
-                <a href="index.html">Home</a>
-                <a style="display:none;" href="about.html">About Me</a>
-                <a style="display:none;" href="projects.html">Projects</a>
-                <a href="mailto:contact@michaeldors.com">Contact</a>
+                <a onclick="transitionToPage('index.html')">Home</a>
+                <a onclick="transitionToPage('about.html')">About Me</a>
+                <a onclick="transitionToPage('projects.html')">Projects</a>
+                <a onclick="transitionToPage('mailto:contact@michaeldors.com')">Contact</a>
             </div>
         </div>
         <div id="mobileopennav">
-            <a id="mobilehome" href="index.html" class="navbutton full-width">Home</a>
-            <a style="display:none;" id="mobileabout" href="about.html" class="navbutton">About Me</a>
-            <a style="display:none;" id="mobileprojects" href="projects.html" class="navbutton">Projects</a>
-            <a id="mobilecontact" href="mailto:contact@michaeldors.com" class="navbutton full-width">Contact Me</a>
+            <a id="mobilehome" onclick="transitionToPage('index.html')" class="navbutton full-width">Home</a>
+            <a id="mobileabout" onclick="transitionToPage('about.html')" class="navbutton">About Me</a>
+            <a id="mobileprojects" onclick="transitionToPage('projects.html')" class="navbutton">Projects</a>
+            <a id="mobilecontact" onclick="transitionToPage('mailto:contact@michaeldors.com')" class="navbutton full-width">Contact Me</a>
         </div>
     </nav>
     <section>
@@ -75,7 +76,7 @@
             <p data-aos="fade-up">
                 Tons of tools for iMessage (or anywhere you share stuff) including tools for text, audio, images, and more stuff you wish was built into iMessage.
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://mk.michaeldors.com">Get It Free</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('http://mk.michaeldors.com')">Get It Free</a>
         </section>
         <section class="projectarea">
             <img data-aos="fade" style="overflow:hidden;" class="headerimgglow" src="headers/countdown.png" />
@@ -89,10 +90,10 @@
                 <br />
                 This project was made in HTML, CSS, and JS.
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://countdown.michaeldors.com">Try It Out</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('http://countdown.michaeldors.com')">Try It Out</a>
         </section>
         <section class="considering">
-            <h1 style="margin:30px">Let's make something cool together. <a style="color: #240200;" target="_blank" rel="noopener noreferrer" href="mailto:contact@michaeldors.com">Get In Touch<i style="margin-left:10px;" class="fa-solid fa-chevron-right"></i></a></h1>
+            <h1 style="margin:30px">Let's make something cool together. <a style="color: #240200; cursor:pointer;" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('mailto:contact@michaeldors.com')">Get In Touch<i style="margin-left:10px;" class="fa-solid fa-chevron-right"></i></a></h1>
         </section>
         <section class="projectarea">
             <img data-aos="fade" style="overflow:hidden;" class="headerimgglow" src="headers/duolingostreak.png" />
@@ -102,10 +103,7 @@
             <p data-aos="fade-up">
                 Quickly figure out how long your Duolingo streak is, without opening the app. Combine with other logic for cool automations.
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://www.icloud.com/shortcuts/3fcd582c50454be7a1eff98bf78c1a05">Check It Out</a>
-        </section>
-        <section class="projectarea">
-            <p style="padding-top:50vh;">this portfolio is a work in progress. expect updates to come.</p>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('https://www.icloud.com/shortcuts/3fcd582c50454be7a1eff98bf78c1a05')">Check It Out</a>
         </section>
     </div>
     <section>
