--- a/projects.html
+++ b/projects.html
@@ -48,8 +48,8 @@
             <a id="mobilecontact" onclick="transitionToPage('mailto:contact@michaeldors.com')" class="navbutton full-width">Contact Me</a>
         </div>
     </nav>
-    <section>
-          <p style="margin-top:60vh; color:white;">this page is coming soon :)</p>
+    <section style="height:100vh">
+          <p style="padding-top:60vh; color:white;">this page is coming soon :)</p>
     </section>
     <section id="filteringcontainer" style="display:none; height:100vh; width:100vw; background-color:#202020">
         <video id="filteranim" width="200" height="200" style="border-radius: 30px; margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); " autoplay muted loop playsinline>
