--- a/marginexperiment/margin.html
+++ b/marginexperiment/margin.html
@@ -135,14 +135,13 @@
         <div class="reviews">
             <div>
                 <img class="marginicon" src="marginicon.png" style="height:50px; width:50px; padding-left:20px; ">   
-                <i class="fa-solid fa-heart" style="color:rgb(0, 0, 0); padding-left:20px; font-size: 30px; position:absolute; top:655px; left:90px; text-shadow: -2px 0px 0px #EEEFF3;"></i>
             </div>
             <br>
             <br>
             <h3 style="padding-left:20px;">Tons of people love Margin!</h3>
             <div class="reviewtrack">
                 <div class="review">
-                    <h3>@Izzy</h3>
+                    <h3>@Mark</h3>
                     <p style="margin-bottom:20px;">via <span style="color:green">google.com</span></p>
                     <h2>I can't imagine going back to life without @margin.</h2>
                     <p style="margin-top:20px; color:#FD5002">
