--- a/404.html
+++ b/404.html
@@ -32,6 +32,8 @@
         font-family:'IBM Plex Mono';
     }
     .glowbutton {
+            border-top: 1px solid rgba(255, 112, 112, 0.805);
+    border-bottom:1px solid rgba(170, 0, 0, 0.849);
         text-decoration: none;
         display: block;
         width: 25%;
