--- a/projects.html
+++ b/projects.html
@@ -21,9 +21,16 @@
         <div id="filtertags">
             <br />
             <br />
+            <br/>
+            <Br/>
             <a class="filterbutton" onclick="filter('All');"><i class="fa-regular fa-rectangle-list"></i> Show All</a>
             <a class="filterbutton" onclick="filter('Website');"><i class="fa-solid fa-globe"></i> Websites</a>
+            <a class="filterbutton" onclick="filter('Design');"><i class="fa-solid fa-pen-nib"></i> Designs</a>
+            <br/>
+            <br/>
             <a class="filterbutton" onclick="filter('Shortcut');"><i class="fa-brands fa-apple"></i> Shortcuts</a>
+            <a class="filterbutton" onclick="filter('Video');"><i class="fa-solid fa-film"></i> Videos</a>
+            <a class="filterbutton" onclick="filter('Music');"><i class="fa-solid fa-music"></i> Music</a>
         </div>
         <div id="sorttags">
 
@@ -48,47 +55,24 @@
             <a id="mobilecontact" onclick="transitionToPage('mailto:contact@michaeldors.com')" class="navbutton full-width">Contact Me</a>
         </div>
     </nav>
-    <section style="height:100vh">
-          <p style="padding-top:60vh; color:white;">this page is coming soon :)</p>
-    </section>
     <section id="filteringcontainer" style="display:none; height:100vh; width:100vw; background-color:#202020">
         <video id="filteranim" width="200" height="200" style="border-radius: 30px; margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); " autoplay muted loop playsinline>
             <source src="filteringanim.mp4" type="video/mp4">
         </video>
     </section>
 
-
+    <section style="height:100vh">
+        <p style="padding-top:60vh; color:white;">this page is under active development and is coming soon</p>
+  </section>
     <div id="projectcontainer">
-        <section class="projectarea" data-projecttype="shortcut">
-            <h1 data-aos="fade-up">MessageKit</h1>
-            <h2 data-aos="fade-up">Siri Shortcut</h2>
+        <section class="projectarea" data-projecttype="design">
+            <h1 data-aos="fade-up">example</h1>
+            <h2 data-aos="fade-up">Design</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/messagekit.png" />
             <p data-aos="fade-up">
                 Tons of tools for iMessage (or anywhere you share stuff) including tools for text, audio, images, and more stuff you wish was built into iMessage.
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('http://mk.michaeldors.com')">Get It Free</a>
-        </section>
-        <section class="projectarea" data-projecttype="website">
-            <h1 data-aos="fade-up">Countdown</h1>
-            <h2 data-aos="fade-up">Website</h2>
-            <img data-aos="fade-up" class="headerimg" src="headers/countdown.png" />
-            <p data-aos="fade-up">
-                A beautiful website to count down to any event. You can change the colors, date, and customize a ton of other options.
-                <br />
-                <br />
-                <br />
-                This project was made in HTML, CSS, and JS.
-            </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('http://countdown.michaeldors.com')">Try It Out</a>
-        </section>
-        <section class="projectarea" data-projecttype="shortcut">
-            <h1 data-aos="fade-up">Pull Duolingo Streak</h1>
-            <h2 data-aos="fade-up">Siri Shortcut</h2>
-            <img data-aos="fade-up" class="headerimg" src="headers/duolingostreak.png" />
-            <p data-aos="fade-up">
-                Quickly figure out how long your Duolingo streak is, without opening the app. Combine with other logic for cool automations.
-            </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('https://www.icloud.com/shortcuts/3fcd582c50454be7a1eff98bf78c1a05')">Check It Out</a>
         </section>
         <section class="projectarea" data-projecttype="shortcut">
             <h1 data-aos="fade-up">MessageKit</h1>
@@ -112,6 +96,24 @@
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('http://countdown.michaeldors.com')">Try It Out</a>
         </section>
+        <section class="projectarea" data-projecttype="website">
+            <h1 data-aos="fade-up">Wifflde</h1>
+            <h2 data-aos="fade-up">Website</h2>
+            <img data-aos="fade-up" class="headerimg" src="headers/wiffdle.png" />
+            <p data-aos="fade-up">
+                A fork of Poeltl Unlimited made in only a few days to support MLW Wiffleball stats, daily challenges, and more.
+            </p>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('http://wiffdle.github.com')">Play Now</a>
+        </section>
+        <section class="projectarea" data-projecttype="website">
+            <h1 data-aos="fade-up">Margin</h1>
+            <h2 data-aos="fade-up">Website</h2>
+            <img data-aos="fade-up" class="headerimg" src="headers/margin.png" />
+            <p data-aos="fade-up">
+                A nonfunctional, static landing page
+            </p>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('http://michaeldors.com/marginexperiment/margin.html')">Check It Out</a>
+        </section>
         <section class="projectarea" data-projecttype="shortcut">
             <h1 data-aos="fade-up">Pull Duolingo Streak</h1>
             <h2 data-aos="fade-up">Siri Shortcut</h2>
@@ -120,6 +122,15 @@
                 Quickly figure out how long your Duolingo streak is, without opening the app. Combine with other logic for cool automations.
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('https://www.icloud.com/shortcuts/3fcd582c50454be7a1eff98bf78c1a05')">Check It Out</a>
+        </section>
+        <section class="projectarea" data-projecttype="website">
+            <h1 data-aos="fade-up">Tarea</h1>
+            <h2 data-aos="fade-up">Website</h2>
+            <img data-aos="fade-up" class="headerimg" src="headers/tarea.png" />
+            <p data-aos="fade-up">
+                A concept/landing page for a to-do app.
+            </p>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('')">Check It Out</a>
         </section>
     </div>
 
