--- a/projects.html
+++ b/projects.html
@@ -99,7 +99,7 @@
             <p data-aos="fade-up">
                 A fork of Poeltl Unlimited made in only a few days to support MLW Wiffleball stats, daily challenges, and more.
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('http://wiffdle.github.com')">Play Now</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('http://wiffdle.github.io')">Play Now</a>
         </section>
         <section class="projectarea" data-projecttype="website">
             <h1 data-aos="fade-up">Margin</h1>
