--- a/projects.html
+++ b/projects.html
@@ -93,7 +93,7 @@
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('http://countdown.michaeldors.com')">Try It Out</a>
         </section>
         <section class="projectarea" data-projecttype="website">
-            <h1 data-aos="fade-up">Wifflde</h1>
+            <h1 data-aos="fade-up">Wiffdle</h1>
             <h2 data-aos="fade-up">Website</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/wiffdle.png" />
             <p data-aos="fade-up">
