--- a/projects.html
+++ b/projects.html
@@ -19,17 +19,23 @@
         <a class="sphericalbutton" onmouseup="filters()"><i class="fa-solid fa-filter"></i> Filter</a>
         <a class="sphericalbutton" onmouseup="sorts()"><i class="fa-solid fa-sort"></i> Sort</a>
         <div id="filtertags">
-            <br />
-            <br />
             <br/>
             <Br/>
             <a class="filterbutton" onclick="filter('All');"><i class="fa-regular fa-rectangle-list"></i> Show All</a>
+            <br class="mobilebr">
+            <br class="mobilebr">
             <a class="filterbutton" onclick="filter('Website');"><i class="fa-solid fa-globe"></i> Websites</a>
+            <br class="mobilebr">
+            <br class="mobilebr">
             <a class="filterbutton" onclick="filter('Design');"><i class="fa-solid fa-pen-nib"></i> Designs</a>
-            <br/>
-            <br/>
+            <br>
+            <br>
             <a class="filterbutton" onclick="filter('Shortcut');"><i class="fa-brands fa-apple"></i> Shortcuts</a>
+            <br class="mobilebr">
+            <br class="mobilebr">
             <a class="filterbutton" onclick="filter('Video');"><i class="fa-solid fa-film"></i> Videos</a>
+            <br class="mobilebr">
+            <br class="mobilebr">
             <a class="filterbutton" onclick="filter('Music');"><i class="fa-solid fa-music"></i> Music</a>
         </div>
         <div id="sorttags">
