--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,7 @@
             <p data-aos="fade-up">
                 Tons of tools for iMessage (or anywhere you share stuff) including tools for text, audio, images, and more stuff you wish was built into iMessage.
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('http://mk.michaeldors.com')">Get It Free</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://mk.michaeldors.com">Get It Free</a>
         </section>
         <section class="projectarea" data-projecttype="website">
             <h1 data-aos="fade-up">Countdown</h1>
@@ -87,7 +87,7 @@
             <p data-aos="fade-up">
                 A beautiful website to count down to any event. You can change the colors, date, and customize a ton of other options.
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('http://countdown.michaeldors.com')">Try It Out</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://countdown.michaeldors.com">Try It Out</a>
         </section>
         <section class="projectarea" data-projecttype="website">
             <h1 data-aos="fade-up">Wiffdle</h1>
@@ -96,7 +96,7 @@
             <p data-aos="fade-up">
                 A fork of Poeltl Unlimited made in only a few days to support MLW Wiffleball stats, daily challenges, and more.
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('http://wiffdle.github.io')">Play Now</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://wiffdle.github.io">Play Now</a>
         </section>
         <section class="projectarea" data-projecttype="website">
             <h1 data-aos="fade-up">Margin</h1>
@@ -105,7 +105,7 @@
             <p data-aos="fade-up">
                 A nonfunctional, static landing page
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('http://michaeldors.com/marginexperiment/margin.html')">Check It Out</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://michaeldors.com/marginexperiment/margin.html">Check It Out</a>
         </section>
         <section class="projectarea" data-projecttype="shortcut">
             <h1 data-aos="fade-up">Pull Duolingo Streak</h1>
@@ -114,7 +114,7 @@
             <p data-aos="fade-up">
                 Quickly figure out how long your Duolingo streak is, without opening the app. Combine with other logic for cool automations.
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('https://www.icloud.com/shortcuts/3fcd582c50454be7a1eff98bf78c1a05')">Check It Out</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://www.icloud.com/shortcuts/3fcd582c50454be7a1eff98bf78c1a05">Check It Out</a>
         </section>
         <section class="projectarea" data-projecttype="website">
             <h1 data-aos="fade-up">Tarea</h1>
@@ -123,7 +123,7 @@
             <p data-aos="fade-up">
                 A concept/landing page for a to-do app.
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" onclick="transitionToPage('')">Check It Out</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="">Check It Out</a>
         </section>
     </div>
 
